unpackaged/main/default/objects/Account/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Formula to append all the previous address details into one field</description>
    <formula>Street_1__c &amp; IF(ISBLANK(Street_1__c)=FALSE,&quot;, &quot;,&quot;&quot;) &amp; Street_2__c &amp; IF(ISBLANK(Street_2__c)=FALSE,&quot;, &quot;,&quot;&quot;)&amp; City__c &amp; IF(ISBLANK(City__c)=FALSE,&quot;, &quot;,&quot;&quot;) &amp; Postcode__c &amp; IF(ISBLANK(Postcode__c)=FALSE,&quot;, &quot;,&quot;&quot;) &amp; Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>