unpackaged/main/default/objects/Account/fields/Broker_Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Network_Name__c</fullName>
    <inlineHelpText>The network the broker belongs to</inlineHelpText>
    <label>Broker Network Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Network_Member__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bravo</fullName>
            </value>
            <value>
                <fullName>Cobra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>