unpackaged/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I&#39;m self employed</fullName>
            </value>
            <value>
                <fullName>I trade as a partnership</fullName>
            </value>
            <value>
                <fullName>I trade as a limited company</fullName>
            </value>
            <value>
                <fullName>I&#39;m employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>