unpackaged/main/default/objects/Account/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>ContactName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>