unpackaged/main/default/objects/Account/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>This is used in managing broker relationships. We will store broker domain in this field, so any new contacts can be easily identified and linked to the correct Account.</description>
    <label>Domain</label>
    <length>200</length>
    <type>Text</type>
</CustomField>