unpackaged/main/default/objects/Account/fields/Git_Test_field__c.field-meta.xml
<CustomField>
    <fullName>Git_Test_field__c</fullName>
    <label>Git Test field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>