unpackaged/main/default/objects/Account/fields/Network_Member__c.field-meta.xml
<CustomField>
    <fullName>Network_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flags is Broker is a member of any broker network</inlineHelpText>
    <label>Network Member</label>
    <type>Checkbox</type>
</CustomField>