unpackaged/main/default/objects/Account/fields/Office_Email__c.field-meta.xml
<CustomField>
    <fullName>Office_Email__c</fullName>
    <inlineHelpText>Generic email address to reach the company</inlineHelpText>
    <label>Office Email</label>
    <type>Email</type>
</CustomField>