unpackaged/main/default/objects/Account/fields/Total_GWP__c.field-meta.xml
<CustomField>
    <fullName>Total_GWP__c</fullName>
    <description>Total value of all insurance policies sold by this broker</description>
    <inlineHelpText>Total value of policies sold</inlineHelpText>
    <label>Total GWP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>