unpackaged/main/default/objects/Account/fields/Total_Policies_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Policies_Sold__c</fullName>
    <description>Total number of Insurance Policies sold by the broker</description>
    <inlineHelpText>Total number of Insurance Policies sold by the broker</inlineHelpText>
    <label>Total Policies Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>