unpackaged/main/default/objects/Account/fields/Trading_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Trading_Start_Date__c</fullName>
    <inlineHelpText>Agreed date broker starts trading our products</inlineHelpText>
    <label>Trading Start Date</label>
    <type>Date</type>
</CustomField>