unpackaged/main/default/objects/Account/recordTypes/Broker.recordType-meta.xml
<RecordType>
    <fullName>Broker</fullName>
    <active>true</active>
    <description>Record type used to assign to broker Account</description>
    <label>Broker</label>
</RecordType>