unpackaged/main/default/objects/Account/recordTypes/Employed.recordType-meta.xml
<RecordType>
    <fullName>Employed</fullName>
    <active>true</active>
    <label>Employed</label>
</RecordType>