unpackaged/main/default/objects/Account/recordTypes/Small_Business.recordType-meta.xml
<RecordType>
    <fullName>Small_Business</fullName>
    <active>true</active>
    <description>A small business account represents a registered company which employs between 2 and 10 employees</description>
    <label>Small Business</label>
</RecordType>