unpackaged/main/default/objects/Account/recordTypes/Sole_Proprietor.recordType-meta.xml
<RecordType>
    <fullName>Sole_Proprietor</fullName>
    <active>true</active>
    <description>A business account that represents a registered company which employs a single employee</description>
    <label>Sole Proprietor</label>
</RecordType>