unpackaged/main/default/objects/Account/validationRules/AgencyNumberCannotBeBlankWhenLive.validationRule-meta.xml
<ValidationRule>
    <fullName>AgencyNumberCannotBeBlankWhenLive</fullName>
    <active>true</active>
    <description>Agency number must be populated if Account status is updated to Live</description>
    <errorConditionFormula>AND(

   ISPICKVAL(Status__c, &#39;Live&#39;) ,

   ISBLANK( Agency_Number__c)

)</errorConditionFormula>
    <errorDisplayField>Agency_Number__c</errorDisplayField>
    <errorMessage>Please populate Agency Number before moving Account to Live status</errorMessage>
</ValidationRule>