unpackaged/main/default/objects/Account/listViews/B2C_General_Accounts.listView-meta.xml
<ListView>
    <fullName>B2C_General_Accounts</fullName>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.General</value>
    </filters>
    <label>B2C (General) Accounts</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Sales_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>