unpackaged/main/default/objects/Account/listViews/Broker_Accounts.listView-meta.xml
<ListView>
    <fullName>Broker_Accounts</fullName>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Status__c</columns>
    <columns>Agency_Number__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Broker</value>
    </filters>
    <label>B2B (Broker) Accounts</label>
    <sharedTo>
        <group>Broker_Sales_Team</group>
    </sharedTo>
</ListView>